test/TestSuite/Syntax/Correct/Macro-2.tjp
project "Test" 2010-04-28 +1w {
  timezone "America/Denver"
}

macro task [ task "${0}" ]
macro tname [ "foo" ]
${task "${tname}"} { }

